# bento_reference_service

./: .gitignore  .gitmodules  Dockerfile  README.md  dev.Dockerfile  docker-compose.refget-compliance.yaml  docker-compose.test.yaml  docker-compose.yaml  docker-compose.yml  entrypoint.bash  entrypoint.dev.bash  pyproject.toml  run.bash  run.dev.bash  test-docker.bash
.github/workflows/: build.yml  lint.yml  test.yml
bento_reference_service/: app.py  authz.py  config.py  constants.py  db.py  drs.py  es.py  fai.py  features.py  genomes.py  indices.py  logger.py  main.py  models.py  schemas.py  streaming.py  tables.py  utils.py
bento_reference_service/routers/: constants.py  data_types.py  genomes.py  ingest.py  refget.py  schemas.py  search.py  tables.py  tasks.py  workflows.py
bento_reference_service/sql/: migrate_v0_2.sql  migrate_v0_5.sql  migrate_v0_6.sql  schema.sql
bento_reference_service/workflows/: metadata.py
bento_reference_service/workflows/wdls/: fasta_ref.wdl  gff3_annot.wdl  ingest_GRCh38_UCSC_IDs_no_alt.wdl  ingest_fasta.wdl
docs/: basic_ingestion_flow.md  deleting_genomes.md  ingesting_annotations.md  ingesting_features.md  querying_features.md  using_refget.md
tests/: conftest.py  shared_data.py  shared_functions.py  test_db.py  test_fai.py  test_genome_routes.py  test_refget.py  test_service_info.py  test_streaming.py  test_task_routes.py
tests/data/: gencode.v45.first-few.gff3.gz.tbi  hg38.chr1.f100k.fa  hg38.chr1.f100k.fa.fai  sars_cov_2.gff3.gz.tbi
tests/data/refget_compliance/: I.faa.fai  NC.faa.fai  VI.faa.fai
