[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "bento_reference_service"
version = "0.3.2"
description = "Reference data (genomes & annotations) service for the Bento platform."
authors = [
    "David Lougheed <david.lougheed@mail.mcgill.ca>",
]
readme = "README.md"
packages = [{include = "bento_reference_service"}]
include = [
    "bento_reference_service/workflows/wdls/*.wdl",
    "bento_reference_service/sql/*.sql",
]
repository = "https://github.com/bento-platform/bento_reference_service"
license = "LGPL-3.0-only"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = "^3.10.0"
fastapi = {extras = ["all"], version = "^0.115.5"}
pydantic = "^2.6.1"
bento-lib = {extras = ["fastapi"], version = "^12.2.3"}
aiofiles = "^24.1.0"
pysam = "~0.22.1"
jsonschema = "^4.23.0"
pydantic-settings = "^2.1.0"
asyncpg = "^0.30.0"

[tool.poetry.group.dev.dependencies]
aioresponses = "^0.7.6"
black = "^24.8.0"
coverage = "^7.6.1"
debugpy = "^1.8.1"
httpx = "^0.27.0"
pytest = "^8.2.1"
pytest-asyncio = "^0.23.5"
pytest-cov = "^5.0.0"
fasta-checksum-utils = "^0.4.3"

[tool.black]
line_length = 120
