[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "bento_reference_service"
requires-python = ">= 3.10"

[tool.poetry]
name = "bento_reference_service"
version = "0.5.0"
description = "Reference data (genomes & annotations) service for the Bento platform."
authors = [
    "David Lougheed <david.lougheed@mail.mcgill.ca>",
]
readme = "README.md"
packages = [{include = "bento_reference_service"}]
include = [
    "bento_reference_service/workflows/wdls/*.wdl",
    "bento_reference_service/sql/*.sql",
]
repository = "https://github.com/bento-platform/bento_reference_service"
license = "LGPL-3.0-only"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = "^3.10.0"
fastapi = {extras = ["all"], version = "^0.116.1"}
pydantic = "^2.6.1"
bento-lib = {extras = ["fastapi"], version = "^13.4.0"}
aiofiles = "^24.1.0"
pysam = "~0.23.3"
jsonschema = "^4.23.0"
pydantic-settings = "^2.1.0"
asyncpg = "^0.30.0"
structlog = "^25.1.0"

[tool.poetry.group.dev.dependencies]
aioresponses = "^0.7.6"
coverage = "^7.6.1"
debugpy = "^1.8.1"
httpx = "^0.28.0"
pytest = "^8.2.1"
pytest-asyncio = "^1.0.0"
pytest-cov = "^6.0.0"
fasta-checksum-utils = "^0.4.3"
ruff = "^0.13.0"

[tool.ruff]
line-length = 120
